apps/jellyfin/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: web
      protocol: TCP
      port: 8096
      targetPort: 8096
