apps/jellyfin/base/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-https
spec:
  hostnames:
    - jellyfin.nahue.ar
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: jellyfin
      namespace: jellyfin
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: jellyfin
          port: 8096
          weight: 1
